# ServerlessFastapiPoetry

./: .gitignore  README.rst  package-lock.json  package.json  pyproject.toml  serverless.yml
fastapi_serverless_sample/: app.py
tests/: test_fastapi_serverless_sample.py
