[tool.poetry]
name = "fastapi-serverless-sample"
version = "0.1.0"
description = ""
authors = ["Nimish Verma <nimishverma@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
mangum = "^0.12.3"
uvicorn = "^0.15.0"
boto3 = "^1.18.65"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
